--- a/.stylelintrc
+++ b/.stylelintrc
@@ -2,11 +2,10 @@
     "extends": "stylelint-config-standard",
     "plugins": [
         "stylelint-scss"
-    ],    
+    ],
     "rules": {
-        "at-rule-empty-line-before": null,
         "indentation": 4,
-        "scss/dollar-variable-pattern": "^foo",
+        "scss/dollar-variable-pattern": "^m-",
         "scss/selector-no-redundant-nesting-selector": true
     }
 }
