Update version and readme

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "modul-components",
+  "name": "@ulaval/modul-components",
   "version": "0.1.0",
   "description": "Component library",
   "author": "Martin Simard <martin.simard@dti.ulaval.ca>",
