removed package privacy for publishing

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Component library",
   "author": "Martin Simard <martin.simard@dti.ulaval.ca>",
-  "private": true,
+  "private": false,
   "scripts": {
     "clean": "rimraf dist",
     "dev": "webpack-dev-server --config conf/webpack.config.js --content-base src --colors --port 8082 --open --history-api-fallback",
