--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@types/es6-promise": "^0.0.32",
     "@types/node": "^7.0.16",
     "@types/jasmine": "^2.5.47",
-    "awesome-typescript-loader": "^3.1.3",
+    "awesome-typescript-loader": "3.1.3",
     "chromedriver": "^2.27.2",
     "copyfiles": "^1.2.0",
     "custom-tslint-formatters": "^2.1.0",
