--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ulaval/modul-components",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "Component library",
   "author": "Martin Simard <martin.simard@dti.ulaval.ca>",
   "private": false,
@@ -45,7 +45,7 @@
     "@types/es6-promise": "^0.0.32",
     "@types/node": "^7.0.16",
     "@types/jasmine": "^2.5.47",
-    "awesome-typescript-loader": "3.1.3",
+    "awesome-typescript-loader": "^3.1.3",
     "chromedriver": "^2.27.2",
     "copyfiles": "^1.2.0",
     "custom-tslint-formatters": "^2.1.0",
@@ -81,7 +81,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ulaval/vuejs-typescript-template.git"
+    "url": "https://github.com/ulaval/modul-components.git"
   },
   "engines": {
     "node": ">= 6.0.0",
