--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "url-loader": "^0.5.8",
     "vue-property-decorator": "^5.0.1",
     "vue-template-compiler": "^2.3.2",
-    "vue-template-loader": "^0.3.1"
+    "vue-template-loader": "^0.3.1",
+    "vue-touch": "^2.0.0-beta.4"
   },
   "peerDependencies": {
     "vue": "2.x"
@@ -46,7 +47,7 @@
     "@types/es6-promise": "^0.0.32",
     "@types/node": "^7.0.16",
     "@types/jasmine": "^2.5.47",
-    "@types/popper.js" : "^1.10.0",
+    "@types/popper.js": "^1.10.0",
     "awesome-typescript-loader": "^3.1.3",
     "chromedriver": "^2.27.2",
     "copyfiles": "^1.2.0",
