--- a/.stylelintrc
+++ b/.stylelintrc
@@ -6,6 +6,7 @@
     "rules": {
         "indentation": 4,
         "scss/dollar-variable-pattern": "^m-",
-        "scss/selector-no-redundant-nesting-selector": null
+        "scss/selector-no-redundant-nesting-selector": null,
+        "at-rule-no-unknown": null
     }
 }
