--- a/.stylelintrc
+++ b/.stylelintrc
@@ -8,7 +8,6 @@
         "scss/dollar-variable-pattern": "^m-",
         "scss/selector-no-redundant-nesting-selector": null,
         "at-rule-no-unknown": null,
-        "no-descending-specificity": null,
-        "no-duplicate-selectors": null
+        "no-descending-specificity": null
     }
 }
