Add mixin meta; meta files auto-generated

--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "clean": "rimraf dist",
     "dev": "webpack-dev-server --config conf/webpack.config.js --content-base src --colors --port 8082 --open --history-api-fallback",
     "buildWebpack": "webpack --config conf/webpack.config.js --colors",
-    "build": "tsc && copyfiles -u 1 \"./src/**/*.json\" dist && copyfiles -u 1 \"./src/**/*.html\" dist && copyfiles -u 1 \"./src/**/*.scss\" dist && copyfiles -u 1 \"./src/**/*.css\" dist && npm run assetsToDist",
+    "build": "tsc && copyfiles -u 1 \"./src/**/*.json\" dist && copyfiles -u 1 \"./src/**/*.html\" dist && copyfiles -u 1 \"./src/**/*.scss\" dist && copyfiles -u 1 \"./src/**/*.css\" dist && npm run assetsToDist && npm run unitMeta",
     "dtsToDist": "copyfiles -f \"./src/**/*.d.ts\" dist",
     "scssToDist": "copyfiles -u 1 \"./src/styles/**/*.scss\" dist && copyfiles -u 1 \"./src/styles/**/*.css\" dist",
     "assetsToDist": "copyfiles -u 1 \"./src/assets/**/*\" dist",
     "unit": "karma start conf/karma.conf.js --browsers PhantomJS",
-    "unitMeta": "node ./tests/meta/meta",
+    "unitMeta": "node ./tests/meta/meta \"./src/components\" \"./dist/components\" && node ./tests/meta/meta \"./src/mixins\" \"./dist/mixins\"",
     "unitChrome": "karma start conf/karma.conf.js --browsers Chrome",
     "unitall": "karma start conf/karma.conf.js --single-run --junitReport",
     "e2e": "node tests/e2e/index.js",
