--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
         "dtsToDist": "copyfiles -f \"./src/**/*.d.ts\" dist",
         "scssToDist": "copyfiles -u 1 \"./src/styles/**/*.scss\" dist && copyfiles -u 1 \"./src/styles/**/*.css\" dist",
         "assetsToDist": "copyfiles -u 1 \"./src/assets/**/*\" dist",
-        "unit": "karma start conf/karma.conf.js --browsers PhantomJS",
+        "unit": "jest --verbose --silent",
         "metagen": "node ./tests/meta/meta-generator \"./src/components\" \"./dist/components\" && node ./tests/meta/meta-generator \"./src/mixins\" \"./dist/mixins\"",
-        "unitChrome": "karma start conf/karma.conf.js --browsers Chrome",
         "unitall": "karma start conf/karma.conf.js --single-run --junitReport",
         "e2e": "node tests/e2e/index.js",
         "test": "npm run unitall && npm run e2e",
@@ -73,7 +72,6 @@
     },
     "devDependencies": {
         "@types/es6-promise": "^0.0.33",
-        "@types/jasmine": "^2.8.2",
         "@types/jest": "^22.1.1",
         "@types/node": "^8.0.54",
         "@vue/test-utils": "^1.0.0-beta.11",
@@ -89,17 +87,8 @@
         "es6-promise": "^4.1.1",
         "file-loader": "^1.1.5",
         "html-webpack-plugin": "^2.30.1",
-        "jasmine-core": "^2.8.0",
         "jest": "^22.1.4",
         "jest-serializer-vue": "^0.3.0",
-        "karma": "^1.7.1",
-        "karma-chrome-launcher": "^2.2.0",
-        "karma-firefox-launcher": "^1.0.1",
-        "karma-jasmine": "^1.1.1",
-        "karma-junit-reporter": "^1.2.0",
-        "karma-phantomjs-launcher": "^1.0.4",
-        "karma-spec-reporter": "^0.0.31",
-        "karma-webpack": "^2.0.6",
         "moment": "^2.19.3",
         "nightwatch": "^0.9.19",
         "node-sass": "^4.7.2",
