--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "css-loader": "^0.28.7",
         "enquire.js": "^2.1.6",
         "file-loader": "^1.1.5",
+        "filesize": "^3.6.0",
         "moment": "^2.19.3",
         "node-sass": "^4.7.2",
         "popper.js": "^1.12.9",
@@ -90,6 +91,7 @@
         "enquire.js": "^2.1.6",
         "es6-promise": "^4.1.1",
         "file-loader": "^1.1.5",
+        "filesize": "^3.6.0",
         "html-webpack-plugin": "^2.30.1",
         "jest": "^22.1.4",
         "jest-junit": "^3.6.0",
