--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     },
     "devDependencies": {
         "@types/es6-promise": "^0.0.33",
+        "@types/filesize": "^3.6.0",
         "@types/jest": "^22.1.1",
         "@types/node": "^8.0.54",
         "@vue/test-utils": "^1.0.0-beta.11",
