--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
         "@types/jest": "^22.1.1",
         "@types/node": "^8.0.54",
         "@vue/test-utils": "^1.0.0-beta.11",
+        "ajv": "^6.1.1",
         "awesome-typescript-loader": "^3.4.1",
         "axios": "^0.17.1",
         "bundle-loader": "^0.5.5",
@@ -101,7 +102,7 @@
         "nightwatch": "^0.9.19",
         "node-sass": "^4.7.2",
         "popper.js": "^1.12.9",
-        "portal-vue": "^1.1.1",
+        "portal-vue": "~1.1.1",
         "postcss-loader": "^2.0.9",
         "postcss-sass": "^0.2.0",
         "qs": "^6.5.1",
