--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
         "postcss-loader": "^2.0.9",
         "sass-loader": "^6.0.6",
         "style-loader": "^0.19.0",
+        "svg-inline-loader": "^0.8.0",
         "url-loader": "^0.6.2",
         "vue-property-decorator": "^6.0.0",
         "vue-template-compiler": "^2.5.9",
