--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,8 +38,10 @@ jobs:
           name: npm test
           command: npm run unitall
           environment:
-            JEST_JUNIT_OUTPUT: "reports/junit/js-test-results.xml"
+            JEST_JUNIT_OUTPUT: "reports/jest/js-test-results.xml"
+            JEST_HTML_REPORTER_OUTPUT_PATH: "reports/jest/js-test-results.html"
+            JEST_HTML_REPORTER_INCLUDE_FAILURE_MSG: true
       - store_test_results:
-          path: reports/junit
+          path: reports/jest
       - store_artifacts:
-          path: reports/junit
+          path: reports/jest
