--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "unit": "jest --verbose --silent",
         "unitwatch": "jest --watch --verbose --silent",
         "metagen": "node ./tests/meta/meta-generator \"./src/components\" \"./dist/components\" && node ./tests/meta/meta-generator \"./src/mixins\" \"./dist/mixins\"",
-        "unitall": "jest --ci --testResultsProcessor=jest-junit",
+        "unitall": "jest --ci --testResultsProcessor=./tests/jest/ci-test-processor",
         "e2e": "node tests/e2e/index.js",
         "test": "npm run unitall && npm run e2e",
         "tslint": "tslint -c conf/tslint.json -e 'src/**/*.d.ts' -e 'tests/unit/**/*.d.ts' -s node_modules/custom-tslint-formatters/formatters -t grouped 'src/**/*.ts' 'tests/unit/**/*.ts' 'tests/e2e/*.ts'",
@@ -95,6 +95,7 @@
         "filesize": "^3.6.0",
         "html-webpack-plugin": "^2.30.1",
         "jest": "^22.1.4",
+        "jest-html-reporter": "^2.0.0",
         "jest-junit": "^3.6.0",
         "jest-serializer-vue": "^0.3.0",
         "moment": "^2.19.3",
