--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "unitall": "jest --ci --coverage --testResultsProcessor=./tests/jest/ci-test-processor",
         "e2e": "node tests/e2e/index.js",
         "test": "npm run unitall && npm run e2e",
-        "tslint": "tslint -c conf/tslint.json -e 'src/**/*.d.ts' -e 'tests/unit/**/*.d.ts' -s node_modules/custom-tslint-formatters/formatters -t grouped 'src/**/*.ts' 'tests/unit/**/*.ts' 'tests/e2e/*.ts'",
+        "tslint": "tslint  -c conf/tslint.json -e 'src/**/*.d.ts' -e 'tests/unit/**/*.d.ts' -s node_modules/custom-tslint-formatters/formatters -t grouped 'src/**/*.ts' 'tests/unit/**/*.ts' 'tests/e2e/*.ts'",
+        "tslint-ci": "tslint  -c conf/tslint.json -e 'src/**/*.d.ts' -e 'tests/unit/**/*.d.ts' -t junit -o reports/junit/js-lint-results.xml 'src/**/*.ts' 'tests/unit/**/*.ts' 'tests/e2e/*.ts'",
         "stylelint": "stylelint \"src/**/*.css\" \"src/**/*.scss\" --config conf/stylelint.json",
         "prepack": "npm run clean && npm run build"
     },
@@ -51,9 +52,6 @@
             "<rootDir>/tests/setup.ts"
         ],
         "coverageDirectory": "<rootDir>/reports/coverage"
-    },
-    "jest-junit": {
-        "output": "./tests/reports/junit.xml"
     },
     "peerDependencies": {
         "axios": "^0.17.1",
