--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
 
       - run:
           name: tslint
-          command: mkdir reports/junit; npm run tslint-ci
+          command: mkdir reports reports/junit; npm run tslint-ci
 
       - run:
           name: npm test
