--- a/package.json
+++ b/package.json
@@ -87,19 +87,18 @@
         "@types/node": "^8.0.54",
         "@vue/test-utils": "^1.0.0-beta.11",
         "ajv": "^6.1.1",
-        "awesome-typescript-loader": "^3.4.1",
         "axios": "^0.17.1",
         "bundle-loader": "^0.5.5",
         "chromedriver": "^2.33.2",
         "copyfiles": "^1.2.0",
         "css-element-queries": "^0.4.0",
-        "css-loader": "^0.28.7",
-        "custom-tslint-formatters": "^2.1.1",
+        "css-loader": "^0.28.10",
+        "custom-tslint-formatters": "^2.3.0",
         "enquire.js": "^2.1.6",
         "es6-promise": "^4.1.1",
-        "file-loader": "^1.1.5",
         "filesize": "^3.6.0",
-        "html-webpack-plugin": "^2.30.1",
+        "fork-ts-checker-webpack-plugin": "^0.4.0",
+        "html-webpack-plugin": "^3.0.6",
         "jest": "^22.4.2",
         "jest-html-reporter": "^2.0.0",
         "jest-junit": "^3.6.0",
@@ -109,34 +108,34 @@
         "node-sass": "^4.7.2",
         "popper.js": "^1.12.9",
         "portal-vue": "~1.1.1",
-        "postcss-loader": "^2.0.9",
-        "postcss-sass": "^0.2.0",
+        "postcss-loader": "^2.1.1",
+        "postcss-sass": "^0.3.0",
         "qs": "^6.5.1",
         "rimraf": "^2.6.2",
-        "sass-loader": "^6.0.6",
+        "sass-loader": "^6.0.7",
         "selenium-server": "^3.8.1",
-        "style-loader": "^0.19.0",
-        "stylelint": "^8.3.1",
-        "stylelint-config-standard": "^18.0.0",
-        "stylelint-scss": "^2.2.0",
-        "stylelint-webpack-plugin": "^0.9.0",
+        "style-loader": "^0.20.2",
+        "stylelint": "^9.1.1",
+        "stylelint-config-standard": "^18.2.0",
+        "stylelint-scss": "^2.5.0",
         "svg-inline-loader": "^0.8.0",
         "ts-jest": "^22.4.1",
+        "ts-loader": "^4.0.1",
         "tslint": "^5.8.0",
         "tslint-config-standard": "^7.0.0",
-        "tslint-loader": "^3.5.3",
+        "tslint-loader": "^3.6.0",
         "typescript": "^2.7.2",
-        "url-loader": "^0.6.2",
         "vue": "^2.5.9",
         "vue-class-component": "^6.1.1",
         "vue-property-decorator": "^6.0.0",
         "vue-router": "^3.0.1",
         "vue-server-renderer": "^2.5.9",
         "vue-template-compiler": "^2.5.9",
-        "vue-template-loader": "^0.3.1",
+        "vue-template-loader": "^0.4.1",
         "vue-touch": "^2.0.0-beta.4",
-        "webpack": "^3.10.0",
-        "webpack-dev-server": "^2.9.5"
+        "webpack": "^4.1.1",
+        "webpack-cli": "^2.0.10",
+        "webpack-dev-server": "^3.1.0"
     },
     "repository": {
         "type": "git",
