thread-loader for ts

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
         "ajv": "^6.1.1",
         "axios": "^0.17.1",
         "bundle-loader": "^0.5.5",
+        "cache-loader": "^1.2.2",
         "chromedriver": "^2.33.2",
         "copyfiles": "^1.2.0",
         "css-element-queries": "^0.4.0",
@@ -119,6 +120,7 @@
         "stylelint-config-standard": "^18.2.0",
         "stylelint-scss": "^2.5.0",
         "svg-inline-loader": "^0.8.0",
+        "thread-loader": "^1.1.5",
         "ts-jest": "^22.4.1",
         "ts-loader": "^4.0.1",
         "tslint": "^5.8.0",
