--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ulaval/modul-components",
-    "version": "0.1.2-feature-shell",
+    "version": "0.1.4-feature-shell",
     "description": "Component library",
     "author": "Martin Simard <martin.simard@dti.ulaval.ca>",
     "private": false,
@@ -54,15 +54,17 @@
     "jest-junit": {
         "output": "./tests/reports/junit.xml"
     },
-    "peerDependencies": {
+    "dependencies": {
         "axios": "^0.17.1",
+        "moment": "^2.19.3"
+    },
+    "peerDependencies": {
         "bundle-loader": "^0.5.5",
         "css-element-queries": "^0.4.0",
         "css-loader": "^0.28.7",
         "enquire.js": "^2.1.6",
         "file-loader": "^1.1.5",
         "filesize": "^3.6.0",
-        "moment": "^2.19.3",
         "node-sass": "^4.7.2",
         "popper.js": "^1.12.9",
         "portal-vue": "~1.1.1",
@@ -71,6 +73,7 @@
         "style-loader": "^0.19.0",
         "svg-inline-loader": "^0.8.0",
         "url-loader": "^0.6.2",
+        "vue": "^2.5.9",
         "vue-property-decorator": "^6.0.0",
         "vue-template-compiler": "^2.5.9",
         "vue-template-loader": "^0.3.1",
@@ -121,7 +124,6 @@
         "tslint-loader": "^3.5.3",
         "typescript": "^2.6.2",
         "url-loader": "^0.6.2",
-        "vue": "^2.5.9",
         "vue-class-component": "^6.1.1",
         "vue-property-decorator": "^6.0.0",
         "vue-router": "^3.0.1",
