remove duplicate dependecies

--- a/package.json
+++ b/package.json
@@ -92,7 +92,6 @@
         "@vue/test-utils": "^1.0.0-beta.11",
         "ajv": "^6.1.1",
         "awesome-typescript-loader": "^3.4.1",
-        "axios": "^0.17.1",
         "bundle-loader": "^0.5.5",
         "chromedriver": "^2.33.2",
         "copyfiles": "^1.2.0",
@@ -108,7 +107,6 @@
         "jest-html-reporter": "^2.0.0",
         "jest-junit": "^3.6.0",
         "jest-serializer-vue": "^0.3.0",
-        "moment": "^2.19.3",
         "nightwatch": "^0.9.19",
         "node-sass": "^4.7.2",
         "popper.js": "^1.12.9",
@@ -131,6 +129,7 @@
         "tslint-loader": "^3.5.3",
         "typescript": "^2.6.2",
         "url-loader": "^0.6.2",
+        "vue": "^2.5.9",
         "vue-class-component": "^6.1.1",
         "vue-property-decorator": "^6.0.0",
         "vue-router": "^3.0.1",
