remove prod conditions in webpack.config

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "setup": "npm install --no-optional",
         "clean": "rimraf dist",
         "dev": "webpack-dev-server --config conf/webpack.config.js --content-base src --colors --port 8082 --open --history-api-fallback",
-        "buildWebpack": "webpack --config conf/webpack.config.js --colors",
+        "buildWebpack": "webpack --config conf/webpack.config.js --colors --env.buildonly",
         "build": "rimraf dist/**/* && tsc && copyfiles -u 1 \"./src/**/*.json\" dist && copyfiles -u 1 \"./src/**/*.html\" dist && copyfiles -u 1 \"./src/**/*.scss\" dist && copyfiles -u 1 \"./src/**/*.css\" dist && npm run assetsToDist && npm run metagen",
         "dtsToDist": "copyfiles -f \"./src/**/*.d.ts\" dist",
         "scssToDist": "copyfiles -u 1 \"./src/styles/**/*.scss\" dist && copyfiles -u 1 \"./src/styles/**/*.css\" dist",
@@ -129,7 +129,7 @@
         "tslint-loader": "^3.5.3",
         "typescript": "^2.6.2",
         "url-loader": "^0.6.2",
-        "vue": "^2.5.9",
+        "vue": "^2.5.13",
         "vue-class-component": "^6.1.1",
         "vue-property-decorator": "^6.0.0",
         "vue-router": "^3.0.1",
