--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ulaval/modul-components",
-    "version": "0.1.5-feature-shell",
+    "version": "1.0.0-beta.21",
     "description": "Component library",
     "author": "Martin Simard <martin.simard@dti.ulaval.ca>",
     "private": false,
