--- a/package.json
+++ b/package.json
@@ -145,5 +145,8 @@
     "files": [
         "dist"
     ],
-    "license": "Apache-2.0"
+    "license": "Apache-2.0",
+    "dependencies": {
+        "mobile-drag-drop": "^2.3.0-rc.1"
+    }
 }
