add buildWebpack script command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,10 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
+      -run:
+          name: build
+          command: npm run buildWebpack
+
       - run:
           name: tslint
           command: mkdir reports reports/junit; npm run tslint-ci
