--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ulaval/modul-components",
-    "version": "1.0.0-beta.21",
+    "version": "1.0.0-feature-modul-shell-error-snaphot.18",
     "description": "Component library",
     "author": "Martin Simard <martin.simard@dti.ulaval.ca>",
     "private": false,
@@ -62,27 +62,27 @@
     },
     "dependencies": {
         "axios": "^0.17.1",
-        "moment": "^2.19.3"
-    },
-    "peerDependencies": {
-        "bundle-loader": "^0.5.5",
-        "css-element-queries": "^0.4.0",
         "css-loader": "^0.28.7",
         "enquire.js": "^2.1.6",
-        "file-loader": "^1.1.5",
-        "filesize": "^3.6.0",
+        "moment": "^2.19.3",
         "node-sass": "^4.7.2",
-        "popper.js": "^1.12.9",
         "portal-vue": "~1.1.1",
         "postcss-loader": "^2.0.9",
         "sass-loader": "^6.0.6",
         "style-loader": "^0.19.0",
+        "vue-class-component": "^6.1.1",
+        "vue-property-decorator": "^6.0.0",
+        "vue-template-compiler": "^2.5.9",
+        "vue-template-loader": "^0.3.1"
+    },
+    "peerDependencies": {
+        "css-element-queries": "^0.4.0",
+        "file-loader": "^1.1.5",
+        "filesize": "^3.6.0",
+        "popper.js": "^1.12.9",
         "svg-inline-loader": "^0.8.0",
         "url-loader": "^0.6.2",
         "vue": "^2.5.9",
-        "vue-property-decorator": "^6.0.0",
-        "vue-template-compiler": "^2.5.9",
-        "vue-template-loader": "^0.3.1",
         "vue-touch": "^2.0.0-beta.4"
     },
     "devDependencies": {
@@ -90,15 +90,14 @@
         "@types/jest": "^22.1.1",
         "@types/node": "^8.0.54",
         "@vue/test-utils": "^1.0.0-beta.11",
+        "@ulaval/shell-ui": "^0.1.4",
         "ajv": "^6.1.1",
         "awesome-typescript-loader": "^3.4.1",
         "bundle-loader": "^0.5.5",
         "chromedriver": "^2.33.2",
         "copyfiles": "^1.2.0",
         "css-element-queries": "^0.4.0",
-        "css-loader": "^0.28.7",
         "custom-tslint-formatters": "^2.1.1",
-        "enquire.js": "^2.1.6",
         "es6-promise": "^4.1.1",
         "file-loader": "^1.1.5",
         "filesize": "^3.6.0",
@@ -108,16 +107,11 @@
         "jest-junit": "^3.6.0",
         "jest-serializer-vue": "^0.3.0",
         "nightwatch": "^0.9.19",
-        "node-sass": "^4.7.2",
         "popper.js": "^1.12.9",
-        "portal-vue": "~1.1.1",
-        "postcss-loader": "^2.0.9",
         "postcss-sass": "^0.2.0",
         "qs": "^6.5.1",
         "rimraf": "^2.6.2",
-        "sass-loader": "^6.0.6",
         "selenium-server": "^3.8.1",
-        "style-loader": "^0.19.0",
         "stylelint": "^8.3.1",
         "stylelint-config-standard": "^18.0.0",
         "stylelint-scss": "^2.2.0",
@@ -130,12 +124,8 @@
         "typescript": "^2.6.2",
         "url-loader": "^0.6.2",
         "vue": "^2.5.13",
-        "vue-class-component": "^6.1.1",
-        "vue-property-decorator": "^6.0.0",
         "vue-router": "^3.0.1",
         "vue-server-renderer": "^2.5.9",
-        "vue-template-compiler": "^2.5.9",
-        "vue-template-loader": "^0.3.1",
         "vue-touch": "^2.0.0-beta.4",
         "webpack": "^3.10.0",
         "webpack-dev-server": "^2.9.5"
