--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "setup": "npm install --no-optional",
         "clean": "rimraf dist",
         "reset": "rmdir /S /Q node_modules",
-        "dev": "rimraf dist/**/* && webpack-dev-server --config conf/webpack.config.js --content-base src --colors --port 8082 --open --history-api-fallback",
+        "dev": "webpack-dev-server --config conf/webpack.config.js --content-base src --colors --port 8082 --open --history-api-fallback",
         "buildWebpack": "webpack --config conf/webpack.config.js --colors --env.buildonly",
         "build": "tsc && copyfiles -u 1 \"./src/**/*.json\" dist && copyfiles -u 1 \"./src/**/*.html\" dist && copyfiles -u 1 \"./src/**/*.scss\" dist && copyfiles -u 1 \"./src/**/*.css\" dist && npm run assetsToDist && npm run metagen",
         "buildlib": "webpack --config conf/webpack.config.js --colors --env.lib",
