--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
         "axios": "^0.17.1",
         "css-loader": "^0.28.7",
         "enquire.js": "^2.1.6",
+        "html-loader": "^0.5.5",
         "mobile-drag-drop": "^2.3.0-rc.1",
         "moment": "^2.19.3",
         "node-sass": "^4.7.2",
