--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
-// Placez vos paramètres dans ce fichier pour remplacer les paramètres par défaut et les paramètres utilisateur.
 {
     "editor.detectIndentation": false,
     "editor.tabSize": 4,
@@ -9,10 +8,10 @@
     "scss.validate": false,
     "tslint.configFile": "conf/tslint.json",
     "typescript.format.insertSpaceAfterFunctionKeywordForAnonymousFunctions": false,
-    "typescriptHero.imports.organizeOnSave": true, //Pour organiser sur le save
-    "typescriptHero.imports.multiLineTrailingComma": false, //Pour pas avoir de trailing comma
-    "typescriptHero.imports.multiLineWrapThreshold": 9999, //Pour garder sur une seule ligne
-    "typescriptHero.imports.grouping": [ //Ordre des imports
+    "typescriptHero.imports.organizeOnSave": true,
+    "typescriptHero.imports.multiLineTrailingComma": false,
+    "typescriptHero.imports.multiLineWrapThreshold": 9999,
+    "typescriptHero.imports.grouping": [
         "Plains",
         "/bootstrap/",
         "Modules",
