--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "css-element-queries": "^0.4.0",
         "css-loader": "^0.28.7",
         "enquire.js": "^2.1.6",
+        "jquery": "^3.3.1",
         "mobile-drag-drop": "^2.3.0-rc.1",
         "moment": "^2.19.3",
         "node-sass": "^4.7.2",
@@ -80,6 +81,7 @@
         "style-loader": "^0.19.0",
         "svg-inline-loader": "^0.8.0",
         "vue-class-component": "^6.1.1",
+        "vue-froala-wysiwyg": "^2.8.1",
         "vue-property-decorator": "^6.0.0",
         "vue-template-compiler": "^2.5.9",
         "vue-template-loader": "^0.3.1"
