--- a/package.json
+++ b/package.json
@@ -87,8 +87,7 @@
         "vue-class-component": "^6.1.1",
         "vue-property-decorator": "^6.0.0",
         "vue-template-compiler": "^2.5.9",
-        "vue-template-loader": "^0.3.1",
-        "webpack-bundle-analyzer": "^2.13.1"
+        "vue-template-loader": "^0.3.1"
     },
     "peerDependencies": {
         "file-loader": "^1.1.5",
@@ -139,7 +138,8 @@
         "vue-server-renderer": "^2.5.9",
         "vue-touch": "^2.0.0-beta.4",
         "webpack": "^3.10.0",
-        "webpack-dev-server": "^2.9.5"
+        "webpack-dev-server": "^2.9.5",
+        "webpack-bundle-analyzer": "^2.13.1"
     },
     "repository": {
         "type": "git",
