--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "lib": [
             "es5", "es6", "dom"
         ],
-        "module": "esnext",
+        "module": "es2015",
         "moduleResolution": "node",
         "experimentalDecorators": true,
         "allowSyntheticDefaultImports": true,
