--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,10 +1,12 @@
+# This file is auto-generated - DO NOT EDIT MANUALLY
+
 # leads:0
 *    @simardo
 
-# typescript:0
+# typescript:2
 *.ts @simardo
 
-# styling:0
+# styling:3
 *.scss @simardo
 *.css @simardo
 *.html @simardo
