--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,14 +1,14 @@
 # This file is auto-generated - DO NOT EDIT MANUALLY
 
 # leads:0
-* jfnadeau
+* simardo jfnadeau vidal7
 
 # typescript:0
-*.ts gabra20 jfnadeau
+*.ts simardo jfnadeau vidal7
 
 # styles:0
-*.css Atiomi jfnadeau
-*.scss Atiomi jfnadeau
+*.css simardo jfnadeau vidal7
+*.scss simardo jfnadeau vidal7
 
 # templates:0
-*.html gabra20 Atiomi jfnadeau
+*.html simardo jfnadeau vidal7
