--- a/package.json
+++ b/package.json
@@ -160,5 +160,7 @@
         "src",
         "dist"
     ],
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "license": "Apache-2.0"
 }
