--- a/package.json
+++ b/package.json
@@ -157,7 +157,7 @@
         "not ie <= 10"
     ],
     "files": [
-        "src",
+        "src/**/*.ts",
         "dist"
     ],
     "license": "Apache-2.0"
