--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
         "unit": "jest --verbose --silent",
         "unitwatch": "jest --watch --verbose --silent",
         "metagen": "node ./tests/meta/meta-generator \"./src/components\" \"./dist/components\" && node ./tests/meta/meta-generator \"./src/mixins\" \"./dist/mixins\"",
+        "metagenv2": "node --inspect-brk -r ./tests/meta-v2/ts-loader.js  ./tests/meta-v2/generate-meta.ts ./tests/meta/test/class-with-props.ts",
+        "metagenv2acc": "node --inspect-brk -r ./tests/meta-v2/ts-loader.js  ./tests/meta-v2/generate-meta.ts ./src/components/datefields/datefields.ts",
         "unitall": "jest --ci --coverage --testResultsProcessor=./tests/jest/ci-test-processor",
         "e2e": "node tests/e2e/index.js",
         "test": "npm run unitall && npm run e2e",
         "tslint": "tslint -c conf/tslint.json -e 'src/**/*.d.ts' -e 'tests/unit/**/*.d.ts' -s node_modules/custom-tslint-formatters/formatters -t grouped 'src/**/*.ts' 'tests/unit/**/*.ts' 'tests/e2e/*.ts'",
-        "tslint-ci": "tslint  -c conf/tslint.json -e 'src/**/*.d.ts' -e 'tests/unit/**/*.d.ts' -t junit -o reports/junit/js-lint-results.xml 'src/**/*.ts' 'tests/unit/**/*.ts' 'tests/e2e/*.ts'",
+        "tslint-ci": "tslint -c conf/tslint.json -e 'src/**/*.d.ts' -e 'tests/unit/**/*.d.ts' -t junit -o reports/junit/js-lint-results.xml 'src/**/*.ts' 'tests/unit/**/*.ts' 'tests/e2e/*.ts'",
         "prepack": "npm run clean && npm run build && npm run buildlib",
         "component": "node ./tests/meta/component-generator",
         "stats": "rimraf dist && npm run buildWebpack && webpack-bundle-analyzer dist/stats.json",
@@ -130,6 +132,8 @@
         "stylelint-scss": "^3.1.3",
         "stylelint-webpack-plugin": "^0.10.5",
         "ts-jest": "^22.4.6",
+        "ts-node": "^7.0.1",
+        "ts-simple-ast": "^15.1.0",
         "tslint": "^5.8.0",
         "tslint-config-standard": "^7.0.0",
         "tslint-loader": "^3.5.3",
