--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "reset": "rmdir /S /Q node_modules",
         "dev": "rimraf dist/**/* && webpack-dev-server --config conf/webpack.config.js --content-base src --colors --port 8082 --open --history-api-fallback",
         "buildWebpack": "webpack --config conf/webpack.config.js --colors --env.buildonly",
-        "build": "tsc && copyfiles -u 1 \"./src/**/*.json\" dist && copyfiles -u 1 \"./src/**/*.html\" dist && copyfiles -u 1 \"./src/**/*.scss\" dist && copyfiles -u 1 \"./src/**/*.css\" dist && npm run assetsToDist && npm run metagen",
+        "build": "tsc && copyfiles -u 1 \"./src/**/*.json\" dist && copyfiles -u 1 \"./src/**/*.html\" dist && copyfiles -u 1 \"./src/**/*.scss\" dist && copyfiles -u 1 \"./src/**/*.css\" dist && npm run assetsToDist && npm run metagen && npm run metagenv2",
         "buildlib": "webpack --config conf/webpack.config.js --colors --env.lib",
         "dtsToDist": "copyfiles -f \"./src/**/*.d.ts\" dist",
         "scssToDist": "copyfiles -u 1 \"./src/styles/**/*.scss\" dist && copyfiles -u 1 \"./src/styles/**/*.css\" dist",
@@ -19,8 +19,7 @@
         "unit": "jest --verbose --silent",
         "unitwatch": "jest --watch --verbose --silent",
         "metagen": "node ./tests/meta/meta-generator \"./src/components\" \"./dist/components\" && node ./tests/meta/meta-generator \"./src/mixins\" \"./dist/mixins\"",
-        "metagenv2": "node --inspect-brk -r ./tests/meta-v2/ts-loader.js  ./tests/meta-v2/generate-meta.ts ./tests/meta/test/class-with-props.ts",
-        "metagenv2acc": "node --inspect-brk -r ./tests/meta-v2/ts-loader.js  ./tests/meta-v2/generate-meta.ts ./src/components/accordion/accordion.ts",
+        "metagenv2": "node -r ./tests/meta-v2/ts-loader.js  ./tests/meta-v2/generate-meta.ts ./dist",
         "unitall": "jest --ci --coverage --testResultsProcessor=./tests/jest/ci-test-processor",
         "e2e": "node tests/e2e/index.js",
         "test": "npm run unitall && npm run e2e",
