--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
-* @simardo @jfnadeau @vidal7
-/package.json @simardo
-/package-lock.json @simardo
+* @chuckmah @fredduguay @jfnadeau @vidal7
+/package.json @chuckmah
+/package-lock.json @chuckmah
