--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
         "jest-junit": "^3.6.0",
         "jest-serializer-vue": "^0.3.0",
         "nightwatch": "^1.0.6",
+        "node-html-parser": "^1.1.10",
         "popper.js": "^1.12.9",
         "postcss-sass": "^0.2.0",
         "qs": "^6.5.1",
