create a separate tsconfig for the test application

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,7 @@
         ]
     },
     "include": [
-        "src/**/*",
-        "tests/app/**/*"
+        "src/**/*"
     ],
     "exclude": [
         "src/**/*.spec.*"
