fix settings and add html extension setting

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
         "eg2.tslint",
         "rbbit.typescript-hero",
         "Orta.vscode-jest",
-        "MS-vsliveshare.vsliveshare"
+        "MS-vsliveshare.vsliveshare",
+        "mkaufman.htmlhint"
     ]
 }
