modification after code review

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "files.insertFinalNewline": true,
     "stylelint.enable": true,
     "css.validate": false,
+    "less.validate": false,
     "scss.validate": false,
     "tslint.configFile": "conf/tslint.json",
     "tslint.run": "onSave",
