Added auto tslint fix on save + scss as a vscode extension

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
     "less.validate": false,
     "scss.validate": false,
     "tslint.configFile": "conf/tslint.json",
-    "tslint.run": "onSave",
+    "tslint.autoFixOnSave": true,
     "typescript.format.insertSpaceAfterFunctionKeywordForAnonymousFunctions": false,
     "files.exclude": {
         "**/node_modules/": true,
