--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,9 @@
         "**/.circleci/": true,
         "**/.github/": true,
     },
+    "search.exclude": {
+        "package-lock.json": true,
+    },
     "html.format.wrapLineLength": 0,
     "html.format.wrapAttributes": "force-aligned",
     "typescript.updateImportsOnFileMove.enabled": "prompt"
